--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
 <footer>
   <p>© 2025 QuickBuy India. All rights reserved.</p>
 </footer>
-
+<div hidden id="snipcart" data-api-key="YjBlMmZlZTEtYmUxNS00OGUzLWIxZWItOTVkNzRjOWE2YTUyNjM4ODU2OTI1MTQ3MjgzNjEy" ...></div>
 </body>
 </html>
