--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <nav>
     <h1>QuickBuy India</h1>
     <ul>
-      <li><a href="#tech">Tech Gadgets</a></li>
+      <li><a href="#tech">Toys</a></li>
       <li><a href="#beauty">Beauty Tools</a></li>
       <li><a href="#home">Home Utility</a></li>
       <li><a href="#car">Car Accessories</a></li>
@@ -31,21 +31,29 @@
   <a href="#tech" class="btn">Start Shopping</a>
 </section>
 
-<section id="tech" class="category">
-  <h3>🔌 Tech Gadgets</h3>
-  <div class="products">
-    <div class="product">
-      <img src="usb-light.jpg" alt="USB Star Light">
-      <h4>USB Star Projector Light</h4>
-      <p>₹249 – Add magic to your car or room instantly.</p>
+<section id="toys" class="product-section">
+  <h2>🧸 Toy Store Favorites</h2>
+  <div class="product-grid">
+    <!-- Each product card -->
+    <div class="product-card">
+      <img src="https://example.com/cactus.jpg" alt="Kids Dancing Cactus Toy">
+      <h3>Kids Dancing Cactus Toy</h3>
+      <p class="price">₹499 <span class="mrp">₹699</span></p>
+      <a href="#" class="btn">Buy Now</a>
     </div>
-    <div class="product">
-      <img src="bt-receiver.jpg" alt="Bluetooth Receiver">
-      <h4>Bluetooth AUX Adapter</h4>
-      <p>₹299 – Make any speaker wireless.</p>
-    </div>
+    <!-- Add similar cards for other products... -->
   </div>
 </section>
+<style>
+.product-section { padding: 40px; background: #fffefa; }
+.product-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px,1fr)); gap: 20px; }
+.product-card { padding: 10px; border: 1px solid #eee; border-radius: 8px; text-align: center; }
+.product-card img { width:100%; height:auto; }
+.price { font-size: 1.2rem; color: #e91e63; }
+.mrp { text-decoration: line-through; color: #999; font-size: 0.9rem; }
+.btn { display:inline-block; padding:8px 12px; background:#ff4081; color:#fff; border-radius:4px; text-decoration:none; }
+.btn:hover { background:#f50057; }
+</style>
 
 <section id="beauty" class="category">
   <h3>💄 Beauty Tools</h3>
