--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </header>
 
 <section class="hero">
-  <h2>Your One-Stop Gadget Store</h2>
+  <h2>Your One-Stop Gadgets Store</h2>
   <p>Shop viral tech, beauty, home & car tools loved by millions</p>
   <a href="#tech" class="btn">Start Shopping</a>
 </section>
