--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   <a href="#">Home</a>
   <a href="#toys">Toys</a>
   <a href="#contact">Contact</a>
+  <a href="cart.html">Cart</a>
 </nav>
 
 <section class="banner">
