--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
   Buy Now
 </a>
     </div>
+    <img src="images/upi-qr.png" alt="Pay using UPI" style="width:130px; margin: 10px 0;" />
+<p><strong>UPI ID:</strong> yourupi@okaxis</p>
+
+<a href="upi://pay?pa=yourupi@okaxis&pn=QuickBuy&cu=INR&am=399" class="btn">Pay via UPI</a>
+<a href="https://wa.me/91XXXXXXXXXX?text=Hi%2C%20I%20just%20paid%20INR%20399%20for%20Toy%20Car.%20Here%20is%20my%20payment%20screenshot." class="btn">Send Order on WhatsApp</a>
 
     <div class="product-card">
       <img src="https://m.media-amazon.com/images/I/51VdGBs1NPL._AC_UL640_FMwebp_QL65_.jpg" alt="RC Stunt Car"/>
@@ -149,7 +154,12 @@
 >
   Buy Now
 </a>
-    </div>
+    </div>			
+		<img src="images/upi-qr.png" alt="Pay using UPI" style="width:130px; margin: 10px 0;" />
+<p><strong>UPI ID:</strong> yourupi@okaxis</p>
+
+<a href="upi://pay?pa=yourupi@okaxis&pn=QuickBuy&cu=INR&am=399" class="btn">Pay via UPI</a>
+<a href="https://wa.me/91XXXXXXXXXX?text=Hi%2C%20I%20just%20paid%20INR%20399%20for%20Toy%20Car.%20Here%20is%20my%20payment%20screenshot." class="btn">Send Order on WhatsApp</a>
 
     <div class="product-card">
       <img src="https://m.media-amazon.com/images/I/71yDGQJwKXL._AC_UL640_FMwebp_QL65_.jpg" alt="Bubble Gun"/>
@@ -166,6 +176,11 @@
   Buy Now
 </a>
     </div>
+    <img src="images/upi-qr.png" alt="Pay using UPI" style="width:130px; margin: 10px 0;" />
+<p><strong>UPI ID:</strong> yourupi@okaxis</p>
+
+<a href="upi://pay?pa=yourupi@okaxis&pn=QuickBuy&cu=INR&am=399" class="btn">Pay via UPI</a>
+<a href="https://wa.me/91XXXXXXXXXX?text=Hi%2C%20I%20just%20paid%20INR%20399%20for%20Toy%20Car.%20Here%20is%20my%20payment%20screenshot." class="btn">Send Order on WhatsApp</a>
 
     <div class="product-card">
       <img src="https://m.media-amazon.com/images/I/71rYpCBQ0-L._AC_UL640_FMwebp_QL65_.jpg" alt="Magnetic Building Blocks"/>
@@ -182,6 +197,11 @@
   Buy Now
 </a>
     </div>
+    <img src="images/upi-qr.png" alt="Pay using UPI" style="width:130px; margin: 10px 0;" />
+<p><strong>UPI ID:</strong> yourupi@okaxis</p>
+
+<a href="upi://pay?pa=yourupi@okaxis&pn=QuickBuy&cu=INR&am=399" class="btn">Pay via UPI</a>
+<a href="https://wa.me/91XXXXXXXXXX?text=Hi%2C%20I%20just%20paid%20INR%20399%20for%20Toy%20Car.%20Here%20is%20my%20payment%20screenshot." class="btn">Send Order on WhatsApp</a>
 
     <div class="product-card">
       <img src="https://m.media-amazon.com/images/I/71mWAPuZIjL._AC_UL640_FMwebp_QL65_.jpg" alt="Soft Plush Panda"/>
@@ -198,6 +218,11 @@
   Buy Now
 </a>
     </div>
+    <img src="images/upi-qr.png" alt="Pay using UPI" style="width:130px; margin: 10px 0;" />
+<p><strong>UPI ID:</strong> yourupi@okaxis</p>
+
+<a href="upi://pay?pa=yourupi@okaxis&pn=QuickBuy&cu=INR&am=399" class="btn">Pay via UPI</a>
+<a href="https://wa.me/91XXXXXXXXXX?text=Hi%2C%20I%20just%20paid%20INR%20399%20for%20Toy%20Car.%20Here%20is%20my%20payment%20screenshot." class="btn">Send Order on WhatsApp</a>
 
     <div class="product-card">
       <img src="https://m.media-amazon.com/images/I/61ReKGGbnsL._AC_UL640_FMwebp_QL65_.jpg" alt="Toy Kitchen Set"/>
@@ -214,6 +239,12 @@
   Buy Now
 </a>
     </div>
+    <img src="images/upi-qr.png" alt="Pay using UPI" style="width:130px; margin: 10px 0;" />
+<p><strong>UPI ID:</strong> yourupi@okaxis</p>
+
+<a href="upi://pay?pa=yourupi@okaxis&pn=QuickBuy&cu=INR&am=399" class="btn">Pay via UPI</a>
+<a href="https://wa.me/91XXXXXXXXXX?text=Hi%2C%20I%20just%20paid%20INR%20399%20for%20Toy%20Car.%20Here%20is%20my%20payment%20screenshot." class="btn">Send Order on WhatsApp</a>
+
   </div>
 </section>
 
